{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 32,
  "lineage": "e4596a89-9439-7d93-99b6-5794063bab66",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "wordpressturbinado",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eigw-055fa0882769e9fc8",
            "region": "us-east-1",
            "tags": {
              "Name": "egress-wordpressturbinado"
            },
            "tags_all": {
              "Name": "egress-wordpressturbinado"
            },
            "vpc_id": "vpc-0fcfeefda10ee0977"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.srewordpressturbinado_publica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f3caa1cf4417e51b",
            "arn": "arn:aws:ec2:us-east-1:348342705419:instance/i-03e3eb69750168edb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03e3eb69750168edb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "my-ed25519-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e1efeac9a0c7850e"
              }
            ],
            "primary_network_interface_id": "eni-0e1efeac9a0c7850e",
            "private_dns": "ip-172-16-1-143.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.143",
            "public_ip": "3.238.20.164",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c8b5ffc78cfdc308",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d881abce6a498f39",
            "tags": {
              "Name": "wordpress_a"
            },
            "tags_all": {
              "Name": "wordpress_a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-050cb6fd07e50fe0c"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "348342705419",
            "id": "i-03e3eb69750168edb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.sc-ec2-wordpress",
            "aws_subnet.wordpressrede_a",
            "aws_vpc.srewordpressturbinado_publica",
            "data.aws_ami.amzn-linux-2023-ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f3caa1cf4417e51b",
            "arn": "arn:aws:ec2:us-east-1:348342705419:instance/i-0b25a8166106eaafb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b25a8166106eaafb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "my-ed25519-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08bf4a4f2645f8a67"
              }
            ],
            "primary_network_interface_id": "eni-08bf4a4f2645f8a67",
            "private_dns": "ip-172-16-2-145.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.2.145",
            "public_ip": "32.192.63.4",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0360ae9fc63291cfd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d2b56f7082ff03a2",
            "tags": {
              "Name": "wordpress_b"
            },
            "tags_all": {
              "Name": "wordpress_b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-050cb6fd07e50fe0c"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "348342705419",
            "id": "i-0b25a8166106eaafb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.sc-ec2-wordpress",
            "aws_subnet.wordpressrede_b",
            "aws_vpc.srewordpressturbinado_publica",
            "data.aws_ami.amzn-linux-2023-ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348342705419:internet-gateway/igw-000e35869ff3e49b7",
            "id": "igw-000e35869ff3e49b7",
            "owner_id": "348342705419",
            "region": "us-east-1",
            "tags": {
              "Name": "IGW_publica"
            },
            "tags_all": {
              "Name": "IGW_publica"
            },
            "vpc_id": "vpc-0fcfeefda10ee0977"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.srewordpressturbinado_publica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default_publica_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348342705419:route-table/rtb-0413d2f0509a94da7",
            "id": "rtb-0413d2f0509a94da7",
            "owner_id": "348342705419",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "eigw-055fa0882769e9fc8",
                "gateway_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-000e35869ff3e49b7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "redewordpressturbinado-route"
            },
            "tags_all": {
              "Name": "redewordpressturbinado-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fcfeefda10ee0977"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "348342705419",
            "id": "rtb-0413d2f0509a94da7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_egress_only_internet_gateway.wordpressturbinado",
            "aws_internet_gateway.igw_publica",
            "aws_vpc.srewordpressturbinado_publica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publica_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cea698b2c1ac6a16",
            "region": "us-east-1",
            "route_table_id": "rtb-0413d2f0509a94da7",
            "subnet_id": "subnet-0d881abce6a498f39"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_egress_only_internet_gateway.wordpressturbinado",
            "aws_internet_gateway.igw_publica",
            "aws_route_table.default_publica_route_table",
            "aws_subnet.wordpressrede_a",
            "aws_vpc.srewordpressturbinado_publica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publica_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084d08a816af5aef0",
            "region": "us-east-1",
            "route_table_id": "rtb-0413d2f0509a94da7",
            "subnet_id": "subnet-0d2b56f7082ff03a2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_egress_only_internet_gateway.wordpressturbinado",
            "aws_internet_gateway.igw_publica",
            "aws_route_table.default_publica_route_table",
            "aws_subnet.wordpressrede_b",
            "aws_vpc.srewordpressturbinado_publica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publica_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d538cba6378a78d",
            "region": "us-east-1",
            "route_table_id": "rtb-0413d2f0509a94da7",
            "subnet_id": "subnet-0eabadc447429f60b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_egress_only_internet_gateway.wordpressturbinado",
            "aws_internet_gateway.igw_publica",
            "aws_route_table.default_publica_route_table",
            "aws_subnet.wordpressrede_c",
            "aws_vpc.srewordpressturbinado_publica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publica_d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b87b583f5a1b966",
            "region": "us-east-1",
            "route_table_id": "rtb-0413d2f0509a94da7",
            "subnet_id": "subnet-0d1e4e2b454791962"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_egress_only_internet_gateway.wordpressturbinado",
            "aws_internet_gateway.igw_publica",
            "aws_route_table.default_publica_route_table",
            "aws_subnet.wordpressrede_d",
            "aws_vpc.srewordpressturbinado_publica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publica_e",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ad4bc5ce7536dc0",
            "region": "us-east-1",
            "route_table_id": "rtb-0413d2f0509a94da7",
            "subnet_id": "subnet-0091602e5b14b1edf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_egress_only_internet_gateway.wordpressturbinado",
            "aws_internet_gateway.igw_publica",
            "aws_route_table.default_publica_route_table",
            "aws_subnet.wordpressrede_e",
            "aws_vpc.srewordpressturbinado_publica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publica_f",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d1844150614d4e2",
            "region": "us-east-1",
            "route_table_id": "rtb-0413d2f0509a94da7",
            "subnet_id": "subnet-0e76142ed9f322ef7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_egress_only_internet_gateway.wordpressturbinado",
            "aws_internet_gateway.igw_publica",
            "aws_route_table.default_publica_route_table",
            "aws_subnet.wordpressrede_f",
            "aws_vpc.srewordpressturbinado_publica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_monitor",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348342705419:security-group/sg-0c6ba6fc76641b817",
            "description": "Allow monitoring traffic (Prometheus, Grafana)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c6ba6fc76641b817",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Grafana",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Prometheus",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_monitor",
            "name_prefix": "",
            "owner_id": "348342705419",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_monitor"
            },
            "tags_all": {
              "Name": "allow_monitor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fcfeefda10ee0977"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "348342705419",
            "id": "sg-0c6ba6fc76641b817",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.srewordpressturbinado_publica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348342705419:security-group/sg-07462e3b4715d9f69",
            "description": "Allow MySQL traffic from EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07462e3b4715d9f69",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from EC2",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-050cb6fd07e50fe0c"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow_rds",
            "name_prefix": "",
            "owner_id": "348342705419",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_rds"
            },
            "tags_all": {
              "Name": "allow_rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fcfeefda10ee0977"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "348342705419",
            "id": "sg-07462e3b4715d9f69",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.sc-ec2-wordpress",
            "aws_vpc.srewordpressturbinado_publica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sc-ec2-wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348342705419:security-group/sg-050cb6fd07e50fe0c",
            "description": "Allow SSH, HTTP, and Node Exporter inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050cb6fd07e50fe0c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Node Exporter",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "pemitir ssh, http, no",
            "name_prefix": "",
            "owner_id": "348342705419",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_http_node"
            },
            "tags_all": {
              "Name": "allow_ssh_http_node"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fcfeefda10ee0977"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "348342705419",
            "id": "sg-050cb6fd07e50fe0c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.srewordpressturbinado_publica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wordpressrede_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348342705419:subnet/subnet-0d881abce6a498f39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d881abce6a498f39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "348342705419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-a-wordpressrede_publica"
            },
            "tags_all": {
              "Name": "subnet-a-wordpressrede_publica"
            },
            "vpc_id": "vpc-0fcfeefda10ee0977"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "348342705419",
            "id": "subnet-0d881abce6a498f39",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.srewordpressturbinado_publica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wordpressrede_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348342705419:subnet/subnet-0d2b56f7082ff03a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2b56f7082ff03a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "348342705419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-b-wordpressrede_publica"
            },
            "tags_all": {
              "Name": "subnet-b-wordpressrede_publica"
            },
            "vpc_id": "vpc-0fcfeefda10ee0977"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "348342705419",
            "id": "subnet-0d2b56f7082ff03a2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.srewordpressturbinado_publica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wordpressrede_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348342705419:subnet/subnet-0eabadc447429f60b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eabadc447429f60b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "348342705419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-c-wordpressrede_publica"
            },
            "tags_all": {
              "Name": "subnet-c-wordpressrede_publica"
            },
            "vpc_id": "vpc-0fcfeefda10ee0977"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "348342705419",
            "id": "subnet-0eabadc447429f60b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.srewordpressturbinado_publica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wordpressrede_d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348342705419:subnet/subnet-0d1e4e2b454791962",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1e4e2b454791962",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "348342705419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-d-wordpressrede_privada"
            },
            "tags_all": {
              "Name": "subnet-d-wordpressrede_privada"
            },
            "vpc_id": "vpc-0fcfeefda10ee0977"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "348342705419",
            "id": "subnet-0d1e4e2b454791962",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.srewordpressturbinado_publica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wordpressrede_e",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348342705419:subnet/subnet-0091602e5b14b1edf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "172.16.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0091602e5b14b1edf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "348342705419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-e-wordpressrede_privada"
            },
            "tags_all": {
              "Name": "subnet-e-wordpressrede_privada"
            },
            "vpc_id": "vpc-0fcfeefda10ee0977"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "348342705419",
            "id": "subnet-0091602e5b14b1edf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.srewordpressturbinado_publica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wordpressrede_f",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348342705419:subnet/subnet-0e76142ed9f322ef7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.16.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e76142ed9f322ef7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "348342705419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-f-wordpressrede_privada"
            },
            "tags_all": {
              "Name": "subnet-f-wordpressrede_privada"
            },
            "vpc_id": "vpc-0fcfeefda10ee0977"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "348342705419",
            "id": "subnet-0e76142ed9f322ef7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.srewordpressturbinado_publica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "srewordpressturbinado_publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348342705419:vpc/vpc-0fcfeefda10ee0977",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-086c6f557ee427f81",
            "default_route_table_id": "rtb-0a364020de8a3ddd9",
            "default_security_group_id": "sg-0e290bffbf426bfbb",
            "dhcp_options_id": "dopt-0827c60b07eee0d07",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fcfeefda10ee0977",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0206edac5747b22cf",
            "ipv6_cidr_block": "2600:1f18:e6:e100::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a364020de8a3ddd9",
            "owner_id": "348342705419",
            "region": "us-east-1",
            "tags": {
              "Name": "wordpressrede-publica"
            },
            "tags_all": {
              "Name": "wordpressrede-publica"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "348342705419",
            "id": "vpc-0fcfeefda10ee0977",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}